--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-slate-900 font-Poppins text-gray-300">
+  <body class="bg-slate-900 font-Poppins text-gray-300 m-0 p-0 box-border">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
