--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Invoice Tracker</title>
   </head>
   <body class="bg-slate-900 font-Poppins text-gray-300 m-0 p-0 box-border">
     <div id="app"></div>
