Added text antialising

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invoice Tracker</title>
   </head>
-  <body class="bg-slate-900 font-Poppins text-gray-300 m-0 p-0 box-border">
+  <body
+    class="bg-slate-900 font-Poppins text-gray-300 m-0 p-0 box-border antialiased"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
